atualizações no web e nas sprints

--- a/Web/assets/html/perfil.html
+++ b/Web/assets/html/perfil.html
@@ -15,11 +15,11 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="#"><i class="fa fa-home"></i> Início</a></li>
-                <li><a href="#"><i class="fa fa-cogs"></i> Serviços</a></li>
+                <li><a href="inicio.html"><i class="fa fa-home"></i> Início</a></li>
+                <li><a href="servicos.html"><i class="fa fa-cogs"></i> Serviços</a></li>
                 <li><a href="#"><i class="fa fa-wrench"></i> Configurações</a></li>
                 <li><a href="#"><i class="fa fa-volume-up"></i> Ouvidoria</a></li>
-                <li><a href="#"><i class="fa fa-sign-out"></i> Sair</a></li>
+                <li><a href="login.html"><i class="fa fa-sign-out"></i> Sair</a></li>
             </ul>
         </div>
     </header>
