--- a/Web/assets/html/servicos.html
+++ b/Web/assets/html/servicos.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seja Bem-Vindo!</title>
-    <link rel="stylesheet" href="/assets/css/inicio.css">
+    <title>Serviços</title>
+    <link rel="stylesheet" href="/assets/css/servicos.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="menu">
             <ul>
                 <li><a href="perfil.html"><i class="fa fa-user"></i> Meu Perfil</a></li>
-                <li><a href="servicos.html"><i class="fa fa-cogs"></i> Serviços</a></li>
+                <li><a href="inicio.html"><i class="fa fa-cogs"></i> Início </a></li>
                 <li><a href="#"><i class="fa fa-wrench"></i> Configurações</a></li>
                 <li><a href="#"><i class="fa fa-volume-up"></i> Ouvidoria</a></li>
                 <li><a href="login.html"><i class="fa fa-sign-out"></i> Sair</a></li>
@@ -25,13 +25,15 @@
     </header>
 
     <div class="content">
-        <h1>Seja Bem-Vindo!</h1>
-        <div class="grafico-ficticio">
-            <img src="/assets/images/grafico.png" alt="Gráfico">
+        <h1>Serviços</h1>
+        <div class="servicos-container">
+            <button id="gerar-holerite-btn">Gerar Holerite de Funcionário</button>
+            <button>Atualizar Lista de Funcionários</button>
+            <button>Gerar Relatório Mensal</button>
         </div>
     </div>
 
-    <script src="/assets/js/inicio.js"></script>
+    <script src="/assets/js/servicos.js"></script>
 </body>
 
 </html>
