--- a/Web/assets/html/holerite.html
+++ b/Web/assets/html/holerite.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerar Holerite</title>
+    <title>Holerite</title>
     <link rel="stylesheet" href="/assets/css/holerite.css">
 </head>
 
@@ -23,11 +23,10 @@
             </ul>
         </div>
     </header>
-    
-<body>
+
     <div class="holerite-container">
         <h1>Gerar Holerite</h1>
-        <form id="holerite-form">
+        <form id="holerite-form" action="holeritegerada.html" method="post">
             <div class="form-group">
                 <label for="funcionario-id">ID do Funcionário:</label>
                 <input type="text" id="funcionario-id" name="funcionario-id" required>
@@ -43,6 +42,7 @@
             <button type="submit">Gerar</button>
         </form>
     </div>
+
     <script src="/assets/js/holerite.js"></script>
 </body>
 
