--- a/Web/assets/html/holerite.html
+++ b/Web/assets/html/holerite.html
@@ -27,17 +27,9 @@
     <div class="holerite-container">
         <h1>Gerar Holerite</h1>
         <form id="holerite-form" action="holeritegerada.html" method="post">
-            <div class="form-group">
-                <label for="funcionario-id">ID do Funcionário:</label>
-                <input type="text" id="funcionario-id" name="funcionario-id" required>
-            </div>
-            <div class="form-group">
+            <div class="form-group nome">
                 <label for="funcionario-nome">Nome do Funcionário:</label>
                 <input type="text" id="funcionario-nome" name="funcionario-nome" required>
-            </div>
-            <div class="form-group">
-                <label for="funcionario-cargo">Cargo do Funcionário:</label>
-                <input type="text" id="funcionario-cargo" name="funcionario-cargo" required>
             </div>
             <button type="submit">Gerar</button>
         </form>
