--- a/Web/assets/html/servicos.html
+++ b/Web/assets/html/servicos.html
@@ -28,11 +28,18 @@
         <h1>Serviços</h1>
         <div class="servicos-container">
             <button id="gerar-holerite-btn">Gerar Holerite de Funcionário</button>
+            <button id="visualizar-holerite-btn">Visualizar Holerite</button>
             <button>Atualizar Lista de Funcionários</button>
             <button>Gerar Relatório Mensal</button>
         </div>
     </div>
-
+    <script src="/assets/js/servicos.js"></script>
+    <script>
+        document.getElementById('visualizar-holerite-btn').addEventListener('click', function () {
+            window.location.href = 'holeritegerada.html';
+        });
+    </script>
+</body>
     <script src="/assets/js/servicos.js"></script>
 </body>
 
