--- a/Web/assets/html/inicio.html
+++ b/Web/assets/html/inicio.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seja Bem-Vindo!</title>
-    <link rel="stylesheet" href="/assets/css/inicio.css">
-</head>
+    <link rel="stylesheet" href="../css/inicio.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <img src="/assets/images/icone.png" alt="Logo">
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="perfil.html"><i class="fa fa-user"></i> Meu Perfil</a></li>
-                <li><a href="servicos.html"><i class="fa fa-cogs"></i> Serviços</a></li>
-                <li><a href="#"><i class="fa fa-wrench"></i> Configurações</a></li>
-                <li><a href="#"><i class="fa fa-volume-up"></i> Ouvidoria</a></li>
-                <li><a href="login.html"><i class="fa fa-sign-out"></i> Sair</a></li>
-            </ul>
-        </div>
+      <div class="logo">
+        <img src="../images/icone.png" alt="Logo" />
+      </div>
+      <div class="menu">
+        <ul>
+          <li>
+            <a href="perfil.html"><i class="fa fa-user"></i> Meu Perfil</a>
+          </li>
+          <li>
+            <a href="servicos.html"><i class="fa fa-cogs"></i> Serviços</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-wrench"></i> Configurações</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-volume-up"></i> Ouvidoria</a>
+          </li>
+          <li>
+            <a href="login.html"><i class="fa fa-sign-out"></i> Sair</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <div class="content">
-        <h1>Seja Bem-Vindo!</h1>
-        <div class="grafico-ficticio">
-            <img src="/assets/images/grafico.png" alt="Gráfico">
-        </div>
+      <h1>Seja Bem-Vindo!</h1>
+      <div class="grafico-ficticio">
+        <img src="../images/grafico.png" alt="Gráfico" />
+      </div>
     </div>
 
-    <script src="/assets/js/inicio.js"></script>
-</body>
-
+    <script src="../js/inicio.js"></script>
+  </body>
 </html>
