--- a/Web/assets/html/cadastro.html
+++ b/Web/assets/html/cadastro.html
@@ -1,68 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tela de Cadastro</title>
-    <link rel="stylesheet" href="/assets/css/cadastro.css">
+    <link rel="stylesheet" href="../css/cadastro.css" />
     <style>
-        /* Adicione este bloco de estilo para estilizar o select */
-        .form-group select {
-            width: 100%;
-            padding: 8px;
-            margin: 5px 0;
-            box-sizing: border-box;
-        }
+      .form-group select {
+        width: 100%;
+        padding: 8px;
+        margin: 5px 0;
+        box-sizing: border-box;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="login-container">
-        <div class="icon">
-            <!-- Adicione aqui o seu ícone, por exemplo, usando uma tag <img> -->
-            <img src="/assets/images/icone.png" alt="Ícone">
+      <div class="icon">
+        <img src="../images/icone.png" alt="Ícone" />
+      </div>
+      <h1>Cadastro</h1>
+      <form id="cadastro-form">
+        <div class="form-group">
+          <label for="name">Nome:</label>
+          <input type="text" name="name" required />
         </div>
-        <h1>Cadastro</h1>
-        <form id="cadastro-form">
-            <div class="form-group">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
-            </div>
-            <div class="form-group">
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="telefone">Telefone:</label>
-                <input type="text" id="telefone" name="telefone" required>
-            </div>
-            <div class="form-group">
-                <label for="cpf-cnpj">CPF/CNPJ:</label>
-                <input type="text" id="cpf-cnpj" name="cpf-cnpj" required>
-            </div>
-            <!-- Adicione o bloco select abaixo do input CPF/CNPJ -->
-            <div class="form-group">
-                <label for="cargo">Cargo:</label>
-                <select id="cargo" name="cargo" required>
-                    <option value="gerente">Gerente</option>
-                    <option value="estoquista">Estoquista</option>
-                    <option value="caixa">Caixa</option>
-                </select>
-            </div>
-            <!-- Fim do bloco select -->
-            <div class="form-group">
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha" required>
-            </div>
-            <div class="form-group">
-                <label for="senha-repetida">Repetir Senha:</label>
-                <input type="password" id="senha-repetida" name="senha-repetida" required>
-            </div>
-            <button type="submit">Cadastrar</button>
-        </form>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" name="email" required />
+        </div>
+        <div class="form-group">
+          <label for="phone">Telefone:</label>
+          <input type="text" name="phone" required />
+        </div>
+        <div class="form-group">
+          <label for="cpf_cnpj">CPF/CNPJ:</label>
+          <input type="text" name="cpf_cnpj" required />
+        </div>
+        <div class="form-group">
+          <label for="role">Cargo:</label>
+          <select id="role" name="role" required>
+            <option value="estoquista">Estoquista</option>
+            <option value="caixa">Caixa</option>
+            <option value="gerente">Gerente</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="password">Senha:</label>
+          <input type="password" name="password" required />
+        </div>
+        <button type="submit">Cadastrar</button>
+      </form>
     </div>
-    <script src="/assets/js/cadastro.js"></script>
-</body>
-
+    <script src="../js/cadastro.js"></script>
+  </body>
 </html>
