--- a/Web/assets/html/login.html
+++ b/Web/assets/html/login.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tela de Login</title>
-    <link rel="stylesheet" href="/assets/css/login.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/login.css" />
+  </head>
+  <body>
     <div class="login-container">
-        <div class="icon">
-            <!-- Adicione aqui o seu ícone, por exemplo, usando uma tag <img> -->
-            <img src="/assets/images/icone.png" alt="Ícone">
+      <div class="icon">
+        <img src="../images/icone.png" alt="Ícone" />
+      </div>
+      <h1>Login</h1>
+      <form id="login-form"">
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
         </div>
-        <h1>Login</h1>
-        <form id="login-form">
-            <div class="form-group">
-                <label for="usuario">Usuário:</label>
-                <input type="text" id="usuario" name="usuario" required>
-            </div>
-            <div class="form-group">
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha" required>
-            </div>
-            <button type="submit">Entrar</button>
-        </form>
+        <div class="form-group">
+          <label for="password">Senha:</label>
+          <input type="password" id="password" name="password" required />
+        </div>
+        <button type="submit">Login</button>
+      </form>
     </div>
-    <script src="/assets/js/login.js"></script>
-</body>
+    <script src="../js/login.js"></script>
+  </body>
 </html>
