--- a/Web/assets/html/index.html
+++ b/Web/assets/html/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Boas-Vindas</title>
-    <link rel="stylesheet" href="./assets/css/startpage.css">
+    <link rel="stylesheet" href="/assets/css/startpage.css">
 </head>
 <body>
     <div class="welcome-container">
         <div class="icon">
             <!-- Adicione aqui o seu ícone, por exemplo, usando uma tag <img> -->
-            <img src="./assets/images/icone.png" alt="Ícone">
+            <img src="/assets/images/icone.png"Ícone">
         </div>
         <h1>Seja bem-vindo!</h1>
         <div class="buttons">
