--- a/Web/assets/html/holerite.html
+++ b/Web/assets/html/holerite.html
@@ -27,7 +27,7 @@
             <a href="#"><i class="fa fa-volume-up"></i> Ouvidoria</a>
           </li>
           <li>
-            <a href="login.html"><i class="fa fa-sign-out"></i> Sair</a>
+            <a href="index.html"><i class="fa fa-sign-out"></i> Sair</a>
           </li>
         </ul>
       </div>
@@ -40,7 +40,7 @@
           <label for="userId">Nome do Funcionário:</label>
           <select id="userId" name="userId"></select>
         </div>
-        <div class="form-group">
+        <div class="form-group select-mes">
           <label for="month">Mês:</label>
           <select id="month" name="month" required>
             <option>-----------</option>
@@ -58,7 +58,7 @@
             <option value="Dezembro">Dezembro</option>
           </select>
         </div>
-        <button type="submit">Gerar Holerite</button>
+        <button class="gerar-btn" type="submit">Gerar Holerite</button>
       </form>
     </div>
 
