--- a/Web/assets/html/perfil.html
+++ b/Web/assets/html/perfil.html
@@ -27,7 +27,7 @@
             <a href="#"><i class="fa fa-volume-up"></i> Ouvidoria</a>
           </li>
           <li>
-            <a href="login.html"><i class="fa fa-sign-out"></i> Sair</a>
+            <a href="index.html"><i class="fa fa-sign-out"></i> Sair</a>
           </li>
         </ul>
       </div>
