--- a/Web/assets/html/servicos.html
+++ b/Web/assets/html/servicos.html
@@ -19,7 +19,7 @@
                 <li><a href="inicio.html"><i class="fa fa-cogs"></i> Início </a></li>
                 <li><a href="#"><i class="fa fa-wrench"></i> Configurações</a></li>
                 <li><a href="#"><i class="fa fa-volume-up"></i> Ouvidoria</a></li>
-                <li><a href="login.html"><i class="fa fa-sign-out"></i> Sair</a></li>
+                <li><a href="index.html"><i class="fa fa-sign-out"></i> Sair</a></li>
             </ul>
         </div>
     </header>
@@ -38,6 +38,9 @@
     <script>
         document.getElementById('visualizar-holerite-btn').addEventListener('click', function () {
             window.location.href = 'holeritegerada.html';
+        });
+        document.getElementById('gerar-holerite-btn').addEventListener('click', function () {
+            window.location.href = 'holerite.html';
         });
     </script>
 </body>
